tests/baselines/reference/invalidContinueInDownlevelAsync.errors.txt
tests/cases/compiler/invalidContinueInDownlevelAsync.ts(3,9): error TS1107: Jump target cannot cross function boundary.


==== tests/cases/compiler/invalidContinueInDownlevelAsync.ts (1 errors) ====
    async function func() {
        if (true) {
            continue;
            ~~~~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
        }
        else {
            await 1;
        }
    }